feat: udistrital/sga_cliente#1534 Actualizadas rutas de los endpoints al estandar REST
